# Bilibili_GetReceivedGiftStream

./: .flake8  .gitignore  .pdm-python  LICENSE  README.md  agent.py  getGift.py  gift_get.py  login.py  main.py  pyproject.toml  requirements.txt  up_to_date.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: codeql-analysis.yml  dpm-update.yml
src/: __init__.py  agent.py  getGift.py  live_exit.py  login.py  up_to_date.py
