[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=22.12.0",
    "pyinstaller>=5.7.0",
]

[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
verify_ssl = false
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
authors = [
    {name = "铂屑", email = "platinumshard@outlook.com"},
]
requires-python = ">=3.10.9,<3.11"
dependencies = [
    "qrcode>=7.3.1",
    "Pillow>=9.4.0",
    "colorama>=0.4.6",
    "httpx>=0.23.3",
    "xlsxwriter>=3.0.7",
    "qrcode<8.0.0,>=7.3.1",
    "Pillow<10.0.0,>=9.2.0",
    "colorama<1.0.0,>=0.4.5",
    "httpx<1.0.0,>=0.23.0",
    "xlsxwriter<4.0.0,>=3.0.7",
]
name = "bilibili_getreceivedgiftstream"
version = "0.8.0"
description = "登录并获取bilibili账号某段时间礼物流水"
license = {text = "MIT"}

[project.urls]
