[tool.poetry]
name = "bilibili-getreceivedgiftstream"
version = "0.1.0"
description = ""
authors = ["铂屑 <80164656+boxie123@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bilibili_getreceivedgiftstream"}]

[tool.poetry.dependencies]
python = "~3.10.6"
qrcode = "^7.4.2"
pillow = "^10.0.1"
httpx = "^0.24.0"
xlsxwriter = "^3.1.0"
rich = "^13.3.5"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true